--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.18.2",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
+    "pdf-lib": "^1.17.1",
     "prisma": "^5.8.1"
   }
 }
